<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BooksListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="109dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="562dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:padding="70dp"
                android:weightSum="7">

                <Button
                    android:id="@+id/tamil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="7dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="7dp"
                    android:text="@string/tamil_button"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/telugu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/telugu_button"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/hindi_button"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/english_button"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/englishGita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/english_gita"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tamilGita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/tamil_gita"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/teluguGita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mgnTop"
                    android:backgroundTint="@color/button"
                    android:minHeight="48dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/telugu_gita"
                    android:textColor="#000000"
                    android:textSize="@dimen/lang_fontSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/alt_text"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>